apps/template-cluster/ollama/deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: models
spec:
  template:
    spec:
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"
      nodeSelector:
        nvidia.com/gpu.present: "true"
